syntax = "proto3";

package kong.util.v1;

option go_package = "github.com/kong/inc-kubernetes-controller/internal/koko/private/gen/grpc/kong/util/v1;v1";

message DataPlanePrerequisite {
  oneof config {
    RequiredPluginsFilter required_plugins = 2;
  }
}

message RequiredPluginsFilter {
  repeated string required_plugins = 1;
}
